--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-	<title>basic calculator</title>
+	<title>Basic Calculator</title>
         <script src="addition.js"></script>
         <script src="subtraction.js"></script>
         <script src="mul.js"></script>
